force-app/main/default/objects/NPN_Onboarding_GPU_Genius_Map__c/NPN_Onboarding_GPU_Genius_Map__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>NPN Onboarding Competency GPU Genius Map</label>
</CustomObject>