force-app/main/default/objects/NPN_Onboarding_GPU_Genius_Map__c/fields/GPU_Genius_Group__c.field-meta.xml
<CustomField>
    <fullName>GPU_Genius_Group__c</fullName>
    <label>GPU Genius Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>