force-app/main/default/objects/NPN_Onboarding_GPU_Genius_Map__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>