force-app/main/default/objects/NPN_Onboarding_GPU_Genius_Map__c/fields/SubProgram_Type__c.field-meta.xml
<CustomField>
    <fullName>SubProgram_Type__c</fullName>
    <label>SubProgram Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>